--- a/Dashboard.html
+++ b/Dashboard.html
@@ -9,13 +9,15 @@
 <body>
     <div class="navbar">
         <div class="navbar-left">
-            Fake Product Review Detection and Analysis System
+            <h1>TREND MART</h1>
         </div>
         <div class="navbar-right">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="Dashboard.html">Dashboard</a>
             <a href="Register.html">Register</a>
+            <a href="Productadd">ProductAdd</a>
+            <a href="Addtype">Addtypes</a>
             <a href="#">My Account</a>
             <a href="index.html">Logout</a>
         </div>
@@ -41,35 +43,30 @@
     </div>
     <div class = "info">
         <div class ="info1">
-            <h3>CONTACT INFO</h3>
+            <h3>PROJECT MEMBER</h3>
             <ul>
-                <li>A</li>
-                <li>B</li>
-                <li>C</li>
-                <li>D</li>
+                <li>PRIYA CHATURVEDI</li>
+                <li>AKANSHA PANDEY</li>
+                <li>VANSHIKA SRIVASTVA</li>
             </ul>
         </div>
         <div class ="info1">
-            <h3>MODULES</h3>
+            <h3>CONTACT</h3>
             <ul>
-                <li>A</li>
-                <li>B</li>
-                <li>C</li>
-                <li>D</li>
+                <li>priya@gmail.com</li>
+                <li>akansha@gmail.com</li>
+                <li>vanshika@gmail.com</li>
+                
             </ul>
         </div>
             <div class ="info1">
-            <h3>PROJECT LINKS</h3>
+            <h3>ADDRESS</h3>
             <ul>
-                <li>A</li>
-                <li>B</li>
-                <li>C</li>
-                <li>D</li>
+                <li>FoET</li>
+                <li>University Of Lucknow</li>
+                <li>Pincode: 226021</li>
+                <li>Uttar Pradesh</li>
             </ul>
-        </div>
-        <div class ="info1">
-            <h3>ABOUT PROJECT</h3>
-            <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. <br>Nobis dolore enim officia <br>neque doloribus, nemo tempora <br>debitis rem explicabo, ut,<br> ab cumque quibusdam <br>doloremque molestiae!</p>
         </div>
           </div>
     
