--- a/Register.html
+++ b/Register.html
@@ -9,7 +9,7 @@
 <body>
   <div class="navbar">
     <div class="navbar-left">
-        Fake Product Review Detection and Analysis System
+      <h1>TREND MART</h1>
     </div>
     <div class="navbar-right">
         <a href="index.html">Home</a>
@@ -64,30 +64,35 @@
     <button id="submitButton">Submit</button>
   </div>
   <div class = "info">
-    <h3>CONTACT INFO</h3>
-    <ul>
-        <li>A</li>
-        <li>B</li>
-        <li>C</li>
-        <li>D</li>
-    </ul>
-    <h3>MODULES</h3>
-    <ul>
-        <li>A</li>
-        <li>B</li>
-        <li>C</li>
-        <li>D</li>
-    </ul>
-    <h3>PROJECT LINKS</h3>
-    <ul>
-        <li>A</li>
-        <li>B</li>
-        <li>C</li>
-        <li>D</li>
-    </ul>
-    <h3>ABOUT PROJECT</h3>
-    <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. <br>Nobis dolore enim officia <br>neque doloribus, nemo tempora <br>debitis rem explicabo, ut,<br> ab cumque quibusdam <br>doloremque molestiae!</p>
+    <div class ="info1">
+      <h3>PROJECT MEMBER</h3>
+      <ul>
+          <li>PRIYA CHATURVEDI</li>
+          <li>AKANSHA PANDEY</li>
+          <li>VANSHIKA SRIVASTVA</li>
+      </ul>
   </div>
+  <div class ="info1">
+      <h3>CONTACT</h3>
+      <ul>
+          <li>priya@gmail.com</li>
+          <li>akansha@gmail.com</li>
+          <li>vanshika@gmail.com</li>
+          
+      </ul>
+  </div>
+      <div class ="info1">
+      <h3>ADDRESS</h3>
+      <ul>
+          <li>FoET</li>
+          <li>University Of Lucknow</li>
+          <li>Pincode: 226021</li>
+          <li>Uttar Pradesh</li>
+      </ul>
+  </div>
+  
+    
+      </div>
 
   <footer>
     <p>&copy; 2024 Fake Product Review Detection and Analysis System</p>
